layout issue

--- a/branches/groupoffice-5.0/www/views/Extjs3/themes/Group-Office/xtheme-groupoffice.css
+++ b/branches/groupoffice-5.0/www/views/Extjs3/themes/Group-Office/xtheme-groupoffice.css
@@ -537,8 +537,12 @@ border-color: #fff;
 	font-weight: bold;
 }
 
+.x-window .x-tab-panel-header{
+	margin-top:10px;
+}
+
 .x-window .x-panel-body ul.x-tab-strip-top{
-	margin: 10px 0 0 0;
+	margin: 0px 0 0 0;
 }
 
 .x-window .x-btn-text{
